objects/APTS_Factory__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Minimum_Questions_in_Questionnaire__c</fullName>
        <label>Minimum Questions in Questionnaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Dimension_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Dimension Set</label>
        <referenceTo>APTS_ABB_Dimension_Set__c</referenceTo>
        <relationshipLabel>Factories</relationshipLabel>
        <relationshipName>Factories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ABB Location</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Factories</relationshipLabel>
        <relationshipName>Factories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <formula>APTS_ABB_Location__r.BALId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configured_Display_Period__c</fullName>
        <label>Configured Display Period</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Configured_Evaluation_Period__c</fullName>
        <label>Configured Evaluation Period</label>
        <picklist>
            <picklistValues>
                <fullName>24 Months</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Date__c</fullName>
        <label>Date</label>
        <picklist>
            <controllingField>APTS_Occurs_Every__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Display_Hit_Rate_By__c</fullName>
        <label>Display Hit Rate By</label>
        <picklist>
            <picklistValues>
                <fullName>Account and Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product and Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account, Product and Factory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Enable_Hit_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Hit Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Enable_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Pricing+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_FCM_App_Name__c</fullName>
        <label>Presto App Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FCM_CR_Type__c</fullName>
        <label>Conversion Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Gap_Factor__c</fullName>
        <label>Gap Factor (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchical_Field_Grouping_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Hierarchical Field Grouping Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Manual_Redirection_Configurator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be used to disable the auto redirection to the configurator.</description>
        <label>Manual Redirection (Configurator)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Margin_Rounding__c</fullName>
        <label>Margin Rounding</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Questions_in_Questionnaire__c</fullName>
        <label>Minimum Questions in Questionnaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Required_Margin__c</fullName>
        <inlineHelpText>P10 is not allowed to be less than this value</inlineHelpText>
        <label>Minimum Required Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Threshold_Value__c</fullName>
        <inlineHelpText>Number of historical successful sales required to generate P-values</inlineHelpText>
        <label>Minimum Threshold Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Reminder_Days__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Number of Days to send Reminder after P-Values are created but not activated</inlineHelpText>
        <label>Number of Reminder Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Occurs_Every__c</fullName>
        <label>Occurs Every</label>
        <picklist>
            <controllingField>APTS_Frequency__c</controllingField>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Day Each Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Week Each Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Preferred_Start_Time__c</fullName>
        <label>Preferred Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Rounding__c</fullName>
        <label>Price Rounding</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Apttus__WizardDesign__c</referenceTo>
        <relationshipLabel>Factories</relationshipLabel>
        <relationshipName>Factories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Scheduled_Job__c</fullName>
        <label>Scheduled Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Hit_Rate_by_Product__c</fullName>
        <label>Threshold Hit Rate % by Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_of_Net_Sales_Values__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Minimum value of quote in order to trigger deal guidance questionnaire</inlineHelpText>
        <label>Threshold of Net Sales Values</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Validate_ExtRate_on_Revise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Exchange Rate on Revise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Week__c</fullName>
        <label>Week</label>
        <picklist>
            <controllingField>APTS_Occurs_Every__c</controllingField>
            <picklistValues>
                <fullName>the 1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>the 2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>the 3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>the 4th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>the last</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Weekday__c</fullName>
        <label>Weekday</label>
        <picklist>
            <controllingField>APTS_Occurs_Every__c</controllingField>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2_CostModelId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Model</label>
        <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
        <relationshipLabel>Factories</relationshipLabel>
        <relationshipName>APTS_factory_cost_model</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Email_Template__c</fullName>
        <inlineHelpText>Email template used to default on &quot;Submit to Customer&quot; page based on this ABB Location. Email template name needs to be entered here</inlineHelpText>
        <label>Default Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to control editability of Order Quantity field on &quot;Place Order&quot; page based upon the Source location</description>
        <inlineHelpText>Checkbox to enable a deviation of the order quantity on &quot;Place Order&quot; page from the original quote line item quantity. The deviation will not change the original quantity of the particular quote line item</inlineHelpText>
        <label>Order Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <label>Factory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Enable_Pricing__c</columns>
        <columns>APTS_Enable_Hit_Rate__c</columns>
        <columns>APTS_Configured_Display_Period__c</columns>
        <columns>APTS_Configured_Evaluation_Period__c</columns>
        <columns>APTS_Gap_Factor__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <booleanFilter>1 OR 2 OR  3</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Enable_Hit_Rate__c</columns>
        <columns>APTS_Enable_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_BAL_ID__c</field>
            <operation>equals</operation>
            <value>9AAE327059</value>
        </filters>
        <filters>
            <field>APTS_BAL_ID__c</field>
            <operation>equals</operation>
            <value>9AAE309545</value>
        </filters>
        <filters>
            <field>APTS_BAL_ID__c</field>
            <operation>equals</operation>
            <value>9AAE326601</value>
        </filters>
        <label>China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FactoryS</fullName>
        <columns>NAME</columns>
        <columns>APTS_BAL_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_BAL_ID__c</field>
            <operation>equals</operation>
            <value>9AAE300088</value>
        </filters>
        <label>Factory Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pricing_Enabled_Factories</fullName>
        <columns>NAME</columns>
        <columns>APTS_Enable_Pricing__c</columns>
        <columns>APTS_Enable_Hit_Rate__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Enable_Pricing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pricing Enabled Factories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Factory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factories</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APTS_GapFactorValidation</fullName>
        <active>true</active>
        <description>Gap factor should not be more than 6 months.</description>
        <errorConditionFormula>AND(APTS_Gap_Factor__c &gt; 6,
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT(ISBLANK(APTS_Gap_Factor__c)))</errorConditionFormula>
        <errorMessage>Gap factor should not be more than 6 months.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_ThresholdHitRateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(APTS_Threshold_Hit_Rate_by_Product__c &gt; 1,
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c))</errorConditionFormula>
        <errorMessage>Threshold Hit Rate % should not be higher than 100%</errorMessage>
    </validationRules>
</CustomObject>